--- a/nanoev.opam
+++ b/nanoev.opam
@@ -13,6 +13,9 @@ depends: [
   "base-unix"
   "odoc" {with-doc}
 ]
+depopts: [
+  "picos" {>= "0.5" & < "0.7"}
+]
 build: [
   ["dune" "subst"] {dev}
   [
