feat: optional dep on trace

--- a/src/core/dune
+++ b/src/core/dune
@@ -2,4 +2,9 @@
  (name nanoev)
  (public_name nanoev)
  (synopsis "Nano ev loop")
- (libraries unix))
+ (libraries unix
+  (select
+   trace_.ml
+   from
+   (trace.core -> trace_.real.ml)
+   (-> trace_.dummy.ml))))
