--- a/src/core/dune
+++ b/src/core/dune
@@ -2,7 +2,8 @@
  (name nanoev)
  (public_name nanoev)
  (synopsis "Nano ev loop")
- (libraries unix
+ (libraries
+  unix
   (select
    trace_.ml
    from
