--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -29,11 +29,14 @@ jobs:
           dune-cache: true
           allow-prerelease-opam: true
 
+      - run: opam pin picos 0.6.0 -y -n
+      - run: opam install picos
+
       - run: opam exec -- dune build @install
 
-      # install some depopts
-      - run: opam pin picos 0.6.0 -y -n
-      - run: opam install -t moonpool trace picos
+      # install some depopts and test deps
+      - run: opam install -t --deps-only .
+      - run: opam install -t trace
 
       - run: opam exec -- dune build --profile=release --force @install @runtest
 
