--- a/src/picos/dune
+++ b/src/picos/dune
@@ -2,4 +2,4 @@
  (name nanoev_picos)
  (public_name nanoev.picos)
  (optional) ; picos
- (libraries threads picos nanoev))
+ (libraries threads picos iostream nanoev))
