--- a/src/picos/dune
+++ b/src/picos/dune
@@ -1,5 +1,4 @@
 (library
  (name nanoev_picos)
- (public_name nanoev.picos)
- (optional) ; picos
- (libraries threads picos iostream nanoev))
+ (public_name nanoev-picos)
+ (libraries threads picos picos_std.sync iostream nanoev))
