--- a/src/tiny_httpd/dune
+++ b/src/tiny_httpd/dune
@@ -5,7 +5,7 @@
   threads
   picos
   (re_export nanoev)
-  nanoev.picos
+  (re_export nanoev-picos)
   picos_std.sync
   (re_export iostream)
   (re_export tiny_httpd)))
