--- a/tests/posix/echo/dune
+++ b/tests/posix/echo/dune
@@ -1,4 +1,4 @@
 (executables
  (names echo_server echo_client)
- (libraries moonpool moonpool.fib nanoev.picos nanoev-posix iostream
+ (libraries moonpool moonpool.fib nanoev-picos nanoev-posix iostream
    trace.core trace-tef))
