--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -25,6 +25,7 @@ jobs:
       - run: opam install odig moonpool trace
       - run: opam pin . -y -n
       - run: opam install . --deps-only
+      - run: opam install .
 
       - run: opam exec -- odig odoc --cache-dir=_doc/ nanoev nanoev-picos nanoev-posix nanoev_tiny_httpd
 
