--- a/nanoev-picos.opam
+++ b/nanoev-picos.opam
@@ -8,7 +8,7 @@ tags: ["unix" "select" "async"]
 homepage: "https://github.com/c-cube/nanoev"
 bug-reports: "https://github.com/c-cube/nanoev/issues"
 depends: [
-  "ocaml"
+  "ocaml" {>= "4.12"}
   "dune" {>= "2.7"}
   "base-unix"
   "nanoev" {= version}
