--- a/src/unix/dune
+++ b/src/unix/dune
@@ -3,4 +3,4 @@
  (public_name nanoev.unix)
  (synopsis "Unix/select backend")
  (private_modules heap)
- (libraries nanoev unix))
+ (libraries nanoev unix threads.posix))
