--- a/nanoev-posix.opam
+++ b/nanoev-posix.opam
@@ -11,7 +11,7 @@ depends: [
   "ocaml" {>= "4.12"}
   "dune" {>= "2.7"}
   "base-unix"
-  "iomux"
+  "iomux" {>= "0.3"}
   "nanoev" {= version}
   "nanoev-picos" {= version}
   "mtime" {>= "2.0"}
